--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -4,4 +4,5 @@
   <p>
     <a href="https://github.com/nanxiaobei/hugo-paper" rel="noopener" target="_blank">Paper 5.1</a>
   </p>
+  <p><a href="https://beian.miit.gov.cn">赣ICP备2022000603号-1</a>
 </footer>
