--- a/assets/app.css
+++ b/assets/app.css
@@ -12,7 +12,7 @@
   --gap: 3.5rem;
   --y-gap: 8rem;
   --wide: 140rem;
-  --narrow: 80rem;
+  --narrow: 100rem;
   --side: calc((var(--wide) - var(--narrow)) / 2);
   --header: 8rem;
   --footer: calc(8rem + var(--safe-bottom));
@@ -653,7 +653,12 @@ img {
 }
 
 .footer p + p::before {
-  content: '·';
+  content: '|';
+  margin-inline: 0.6rem;
+}
+
+.footer img + img::before {
+  content: ' ';
   margin-inline: 0.6rem;
 }
 
