--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,8 +1,13 @@
 <footer class="footer">
-  <p>&copy; {{ now.Year }} <a href="{{ `` | absURL }}">{{ site.Title }}</a></p>
+  <p>&copy; {{ now.Year }} </p>
   <p>Powered by <a href="https://gohugo.io/" rel="noopener" target="_blank">Hugo️️</a>️</p>
   <p>
     <a href="https://github.com/nanxiaobei/hugo-paper" rel="noopener" target="_blank">Paper 5.1</a>
   </p>
-  <p><a href="https://beian.miit.gov.cn">赣ICP备2022000603号-1</a>
+
+  <p><a target="_blank" rel="noopener"
+      href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=36012202000295"><div><img src="./beian.png"
+        style="float:left;" /></div><div style="color:#939393;">赣公网安备 36012202000295号</div></a></p>
+  <p><a href="https://beian.miit.gov.cn" style="color:#939393;" >赣ICP备2022000603号-1</a></p>
+
 </footer>
